watershed-kernel/tests/compile_fail/construct_completed_run_directly.stderr
error: cannot construct `Run<watershed_distributary::Completed>` with struct literal syntax due to private fields
 --> $WORKSPACE/tests/compile_fail/construct_completed_run_directly.rs
  |
  |     let _run = Run::<Completed> {
  |                ^^^^^^^^^^^^^^^^
  |         state: completed,
  |         ---------------- private field
  |
  = note: ...and other private fields that were not provided
